Добавляет uppercase и ссылку в лого на index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!-- Шапка сайта-->
     <header class="header">
       <nav>
-        <a href="/" class="header-logo link"><span>Web</span> Studio</a>
+        <a href="./index.html" class="header-logo link"
+          ><span>Web</span> Studio</a
+        >
 
         <ul class="site-nav list">
           <li><a href="" class="link current">Студия</a></li>
@@ -230,7 +232,9 @@
     <!--Футер-->
     <footer class="footer">
       <div>
-        <a href="/" class="footer-logo link"> <span>Web</span> Studio</a>
+        <a href="./index.html" class="footer-logo link">
+          <span>Web</span> Studio</a
+        >
         <address class="footer-address">
           г. Киев, пр-т Леси Украинки, 26<br />
           <a href="mailto:info@example.com" class="link">info@example.com</a
@@ -249,7 +253,7 @@
       </div>
 
       <div>
-        <p class="footer-text">подписаться на рассылку</p>
+        <p class="footer-text">подпишитесь на рассылку</p>
         <!--Форма подписки-->
       </div>
       <p class="footer-copyright">2020 | Developed by GoIT Students</p>
