--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,9 @@
     <!-- Шапка сайта-->
     <header class="header">
       <nav>
-        <a href="/" class="header-logo link"><span>Web</span> Studio</a>
+        <a href="./index.html" class="header-logo link"
+          ><span>Web</span> Studio</a
+        >
 
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студия</a></li>
@@ -212,7 +214,9 @@
     <!--Футер-->
     <footer class="footer">
       <div>
-        <a href="/" class="footer-logo link"> <span>Web</span> Studio</a>
+        <a href="./index.html" class="footer-logo link">
+          <span>Web</span> Studio</a
+        >
         <address class="footer-address">
           г. Киев, пр-т Леси Украинки, 26<br />
           <a href="mailto:info@example.com" class="link">info@example.com</a
